	  window_size_init()'s code into window_init(), as they really
	  belong there, remove associated separate calls to them, and
	  make sure window_init() is always called at the same time when
	  redrawing the screen.  Changes to window_init(), main(), and
	  do_alt_speller(); removal of check_die_too_small() and
	  window_size_init(). (DLR)
- color.c:
	- Remove unneeded string.h and fcntl.h includes. (DLR)
- chars.c:
  mbrep()
	- New function, the equivalent of control_mbrep() for non-control
	  characters. (DLR)
  parse_mbchar()
	- Remove now-unneeded bad_chr parameter. (DLR)
  mbstrchr()
	- Don't count matches between valid and invalid multibyte
	  sequences anymore, for consistency. (DLR)
- files.c:
  open_file()
	- Assert that filename isn't NULL, and don't do anything special
	  if it's blank, as the the former case shouldn't occur, and the
	  latter case is now handled elsewhere. (DLR)
  input_tab()
	- Make columns an int instead of a size_t, since it's limited by
	  COLS. (DLR)
- global.c:
  shortcut_init()
	- Simplify wording of nano_gotoline_msg. (Jordi and Ken Tyler)
	- Clarify wording of nano_wordcount_msg, as it won't go through
	  the entire file if the mark is on. (DLR)
- move.c:
  do_first_line(), do_last_line()
	- Simplify by only using edit_redraw(), and also make them call
	  check_statusblank(). (DLR)
  do_page_up(), do_page_down()
	- If there's less than a page of text onscreen, just call
	  do_(first|last)_line(). (DLR)
  do_para_begin(), do_para_begin_void(), do_para_end(),
  do_para_end_void(), do_next_word(), do_next_word_void(),
  do_prev_word(), do_prev_word_void()
	- Move here from nano.c, as they're movement functions, and also
	  make them call check_statusblank().
- nano.c:
  usage()
	- Properly mention the support for "[+LINE,COLUMN]" on the
	  command line when HAVE_GETOPT_LONG isn't defined. (DLR)
  do_verbatim_input()
	- If constant cursor position display is on, make sure the